# csv-detective

./: README.md  pyproject.toml
csv_detective/: analyzer.py  cli.py  display.py  html_report.py
csv_detective.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
